style.css
/* global variables */

:root {
  --green-100: #aefeff;
  --green-200: #4fbdba;
  --green-300: #35858b;
  --green-400: #072227;
  --green-500: #212121;
  --main-size: calc(100vh - (153px + 68px));
}

/* global variables end */

/* css reset */

html {
  box-sizing: border-box;
  font-size: 16px;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
ol,
ul {
  margin: 0;
  padding: 0;
  font-weight: normal;
}

ol,
ul {
  list-style: none;
}

img {
  max-width: 100%;
  height: auto;
}

.visually-hidden {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

/* css reset end */

body {
  background-color: var(--green-400);
  font-family: "Comfortaa", cursive;
  color: #ffffff;
}

.btn {
  background-color: var(--green-100);
  border: none;
  border-radius: 5px;
  color: var(--green-400);
}

/* header */

header > h1 {
  text-align: center;
  padding: 1rem 1rem 0 1rem;
  /* font-size: 24px; */
  font-weight: 700;
  color: var(--green-100);
}

/* form */

.movie-form {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  padding: 1rem;
}

.form-inputs {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  gap: 1rem;
}

input {
  background-color: var(--green-400);
  border: 1px solid var(--green-100);
  border-radius: 5px;
  font-size: 16px;
  font-weight: 300;
  padding: 0.25rem 0.5rem;
  color: var(--green-100);
}

input:focus {
  transition: 0.1s;
  outline: 2px solid var(--green-100);
  box-shadow: 0px 0px 20px 1px var(--green-100);
}

::placeholder {
  color: var(--green-100);
  opacity: 50%;
  font-size: 16px;
  font-weight: 300;
}

.btn-movie-form {
  font-size: 16px;
  font-weight: 700;
  padding: 0.25rem 6rem;
}
/* form end */

/* header end*/

/* footer */
footer {
  background-color: var(--green-200);
  padding: 0.5rem;
}
footer > p {
  font-size: 16px;
  font-weight: 700;
  color: var(--green-500);
  text-align: center;
  padding: 0.25rem;
}
footer > p > a {
  text-decoration: none;
  color: var(--green-500);
}

/* footer end */

/* main */
main {
  min-height: var(--main-size);
}

/* cards */
/* .movie-cards-grid {
  display: flex;
  flex-wrap: wrap;
  max-width: 62rem;
  margin: auto;
  column-gap: 4rem;
  row-gap: 2rem;
  padding: 0 0 1rem 0;
} */

.movie-cards-grid {
  display: grid;
  flex-wrap: wrap;
  grid-template-columns: 1fr 1fr 1fr;
  max-width: 62rem;
  margin: auto;
  column-gap: 4rem;
  row-gap: 2rem;
  padding: 0 0 1rem 0;
}

.movie-card {
  border: 1px solid var(--green-200);
  border-radius: 5px;
  padding: 0.5rem;
  display: flex;
  gap: 0.5rem;
  width: fit-content;
}

.card-img > img {
  width: 100px;
  height: auto;
}

.card-info {
  padding: 5px 0;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  gap: 0.25rem;
}

.card-title {
  font-size: 18px;
  font-weight: 400;
}

.card-year-rate {
  display: flex;
  font-size: 14px;
  color: var(--green-100);
}

.card-year {
  margin-right: 10px;
}

.card-rate-star {
  margin-left: 2px;
}

.card-review-container {
  padding: 0.25rem 0;
  display: flex;
  flex-direction: column;
  gap: 0.25rem;
}

.card-review {
  width: 20ch;
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 3;
  text-overflow: ellipsis;
  word-break: break-all;
  font-size: 14px;
  font-weight: 300;
}

.btn-card-review {
  font-size: 14px;
  padding: 0.2rem 0;
}
/* cards end */
/* main end */

